# WHEEL-LEGGED-BOT

./: README.md  ROBOT.html  rdk_duplex.py  robot.py
body_tracking/: CMakeLists.txt  package.xml
body_tracking/include/: body_tracking.h  common.h  param_node.h
body_tracking/launch/: body_tracking_without_gesture.launch.py  body_tracking_without_input_node.launch.py
body_tracking/src/: body_tracking.cpp  main.cpp
cam_with_web/: package.xml  setup.cfg  setup.py
cam_with_web/launch/: cam_with_web.launch.py
cmd_vel_serial/: package.xml  setup.py
cmd_vel_serial/cmd_vel_serial/: cmd_vel_to_serial_node.py
cmd_vel_serial/launch/: cmd_vel_to_serial.launch.py
hand_detector/: package.xml  setup.py
hand_detector/hand_detector/: hand_detector_node.py
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: ekf.yaml  ld_2d copy.lua  ld_2d.lua
robot_description/launch/: display.launch.py  slam.launch.py  slam.launch.py.back  slam_with_imu.launch.py
robot_description/rviz/: mapping.rviz  rviz.rviz
robot_description/scripts/: auto_save_map_node.py
robot_description/urdf/: robot.urdf  wheel_legged_robot.gv
robot_navigation2/: package.xml  setup.py
robot_navigation2/install/: local_setup.sh  setup.sh
robot_navigation2/launch/: bringup_launch.py
robot_navigation2/maps/: auto_saved_map.pgm  auto_saved_map.yaml  manual_map.pgm  manual_map.yaml
robot_navigation2/param/: robot_nav2.yaml
rplidar_ros/: rplidar.rules
voice_assistant/: package.xml  setup.py
wit_ros2_imu/: create_udev_rules.sh  imu_usb.rules
(+10 files in other folders)
