<?xml version="1.0"?>
<package format="3">
  <name>robot_navigation2</name>
  <version>1.0.0</version>
  <description>Nav2 bringup package for custom robot</description>

  <maintainer email="wangyd@mail.dlut.edu.cn">don</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>pyserial</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
